--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,9 @@
   <body>      
     <header class="header">
       <div class="headerContent">
-        <div class="logo"><img src="images/motive.png" alt="logo"><a href="">
-            <p>moti<span>ve</span></p></a></div>
+        <div class="logo"><img src="assets/img/motive.png" alt="motive"><a href="">
+            <p>moti<span>ve</span></p></a>
+        </div>
         <div class="headerMainContent">
           <div class="line"></div>
           <nav>
@@ -24,7 +25,7 @@
               <li><a href="">Contact</a></li>
             </ul>
           </nav>
-          <div class="search"><a href=""><img src="images/search.jpg" alt="search"></a>
+          <div class="search"><a href=""><img src="assets/img/search.jpg" alt="search"></a>
             <form> 
               <input type="search" placeholder="Search here">
             </form>
@@ -39,17 +40,20 @@
           <h2 class="title">Form the blog</h2>
           <div class="content blog">
             <article>
-              <div class="backgroundLink"><img src="images/image1.jpg" alt="image1"><a href=""></a></div>
+              <div class="backgroundLink"><img src="assets/img/image1.jpg" alt="image1"><a href=""></a>
+              </div>
               <h3>Blog post titles in here</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.   </p>
             </article>
             <article>
-              <div class="backgroundLink"><img src="images/image2.jpg" alt="image2"><a href=""></a></div>
+              <div class="backgroundLink"><img src="assets/img/image2.jpg" alt="image2"><a href=""></a>
+              </div>
               <h3>Blog post titles in here</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.</p>
             </article>
             <article>
-              <div class="backgroundLink"><img src="images/image3.jpg" alt="image3"><a href=""></a></div>
+              <div class="backgroundLink"><img src="assets/img/image3.jpg" alt="image3"><a href=""></a>
+              </div>
               <h3>Blog post titles in here</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.</p>
             </article>
@@ -58,30 +62,38 @@
         <section class="doubleCol">
           <h2 class="title">recent projects</h2>
           <div class="content gallery">
-            <article><img src="images/image4.jpg" alt="image4"><a href="">
+            <article><img src="assets/img/image4.jpg" alt="image4"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image5.jpg" alt="image5"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image5.jpg" alt="image5"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image6.jpg" alt="image6"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image6.jpg" alt="image6"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image7.jpg" alt="image7"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image7.jpg" alt="image7"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image8.jpg" alt="image8"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image8.jpg" alt="image8"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image9.jpg" alt="image9"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image9.jpg" alt="image9"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image10.jpg" alt="image10"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image10.jpg" alt="image10"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
-            <article><img src="images/image11.jpg" alt="image11"><a href="">
+                <p>Photography</p></a>
+            </article>
+            <article><img src="assets/img/image11.jpg" alt="image11"><a href="">
                 <h3>In this way, envanto</h3>
-                <p>Photography</p></a></article>
+                <p>Photography</p></a>
+            </article>
           </div>
         </section>
       </div>
@@ -100,7 +112,7 @@
           </article>
           <article>
             <h4>Follows us</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ab possimus consequuntur.</p><img src="images/social.png" alt="social">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ab possimus consequuntur.</p><img src="assets/img/social.png" alt="social">
           </article>
         </div>
       </div>
